[project]
name = "gold-river-mcp"
version = "0.1.0"
description = "한국형 부동산 AI 에이전트 - 공인중개사무소 업무 혁신을 위한 MCP 기반 솔루션"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "seosamuel02", email = "seosamuel02@example.com" }
]
requires-python = ">=3.11"
keywords = ["mcp", "real-estate", "korea", "proptech", "ai-agent", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # MCP Core
    "mcp[cli]>=1.0.0",

    # HTTP & API
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",

    # Data Processing
    "xmltodict>=0.13.0",
    "pydantic>=2.5.0",

    # Database
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",

    # OCR (선택적 - 권리분석 모듈)
    # "google-cloud-vision>=3.5.0",

    # Template Engine
    "jinja2>=3.1.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "num2words>=0.5.13",
    "thefuzz>=0.22.0",  # Fuzzy search for address matching
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

ocr = [
    "google-cloud-vision>=3.5.0",
    "pdf2image>=1.16.0",
    "Pillow>=10.0.0",
]

scraping = [
    "selenium>=4.16.0",
    "webdriver-manager>=4.0.0",
    "beautifulsoup4>=4.12.0",
]

all = [
    "gold-river-mcp[dev,ocr,scraping]",
]

[project.scripts]
gold-river = "src.cli:main"

[project.urls]
Homepage = "https://github.com/seosamuel02/Gold-River-MCP"
Repository = "https://github.com/seosamuel02/Gold-River-MCP"
Issues = "https://github.com/seosamuel02/Gold-River-MCP/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | data
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["E501"]  # line too long (handled by black)

[tool.ruff.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
exclude = ["data", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
